# workspace-keeper

./: .gitignore  .gitmodules  Dockerfile  README.md  install.sh
common/: CMakeLists.txt  claude_types.cpp  claude_types.h  kwin_desktop.cpp  kwin_desktop.h
config/autostart/: org.wezfurlong.wezterm.desktop
config/floorp/: brotab_mediator.json
config/kde/: kwinrulesrc  org.wezfurlong.wezterm.desktop  workspace-menu-daemon.desktop  workspace-menu.desktop
config/tmux/: tmux.conf
config/wezterm/: wezterm.lua
daemon/: CMakeLists.txt  Dockerfile  runtime-deps.txt
daemon/src/: claude_event_types.h  claude_status_dbus.cpp  claude_status_dbus.h  claude_status_server.cpp  claude_status_server.h  claude_status_tracker.cpp  claude_status_tracker.h  claude_types.h  daemon_server.cpp  daemon_server.h  desktop_monitor.cpp  desktop_monitor.h  enum_strings.h  global_shortcut.cpp  global_shortcut.h  journal_log.cpp  journal_log.h  main.cpp  menu_window.cpp  menu_window.h  status_overlay.cpp  status_overlay.h  tab_tracker.cpp  tab_tracker.h  workspace_db.cpp  workspace_db.h  workspace_manager_dbus.cpp  workspace_manager_dbus.h  workspace_menu.cpp  workspace_menu.h  workspace_model.cpp  workspace_model.h
docs/: design.md
hooks/: claude-status-hook.sh
plasmoid/org.workspace.claude-monitor/: metadata.json
plasmoid/plugin/: CMakeLists.txt  Dockerfile  qmldir
plasmoid/plugin/build-install/: CMakeCache.txt  Makefile  cmake_install.cmake
plasmoid/plugin/build-install/workspacemonitorplugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
plasmoid/plugin/build-install/workspacemonitorplugin_autogen/UVLADIE3JM/: moc_plugin.cpp  moc_plugin.cpp.d  moc_workspace_monitor.cpp  moc_workspace_monitor.cpp.d
plasmoid/plugin/src/: plugin.cpp  plugin.h  workspace_monitor.cpp  workspace_monitor.h
scripts/: generate_constants.sh  parse-floorp-session.py  restart-floorp.sh  wezterm-open.sh
(+1 files in other folders)
